--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "node": ">=8.9.0"
   },
   "scripts": {
-    "start": "egg-scripts start --daemon --title=egg-server-stuer-server",
+    "start": "egg-scripts start --daemon --title=egg-server-stuer-server --port=9001",
     "stop": "egg-scripts stop --title=egg-server-stuer-server",
     "dev": "egg-bin dev",
     "debug": "egg-bin debug",
