--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "stuer-website server side",
   "private": true,
   "dependencies": {
+    "await-stream-ready": "^1.0.1",
     "egg": "^2.2.1",
     "egg-scripts": "^2.5.0",
     "egg-sequelize": "^4.3.1",
     "egg-validate": "^2.0.2",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^1.6.5",
-    "nodemailer": "^5.1.1"
+    "nodemailer": "^5.1.1",
+    "stream-wormhole": "^1.1.0",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "autod": "^3.0.1",
